// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert> that renders an alert should add classes when props are changed 1`] = `
<div
  className="Alert Alert--context_bad"
>
  <div
    className="Alert__content"
    role="alert"
  >
    <strong
      className="Alert__title"
    >
      Hey there
    </strong>
    This is an alert with custom context and a title
  </div>
</div>
`;

exports[`<Alert> that renders an alert should have a button that works 1`] = `
<Alert
  action={
    Object {
      "label": "Click me",
      "onClick": [MockFunction],
    }
  }
  context="brand"
  title="Hey there"
>
  <div
    className="Alert Alert--context_brand"
  >
    <div
      className="Alert__content"
      role="alert"
    >
      <strong
        className="Alert__title"
      >
        Hey there
      </strong>
      This is an alert with custom context and a title
    </div>
    <div
      className="Alert__action"
    >
      <Button
        context="link"
        disabled={false}
        href={null}
        isBlock={false}
        isInline={false}
        onClick={[MockFunction]}
        size="normal"
        type="button"
      >
        <button
          className="Button Button--context_link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Click me
        </button>
      </Button>
    </div>
  </div>
</Alert>
`;

exports[`<Alert> that renders an alert should render default alert correctly 1`] = `
<div
  className="Alert Alert--context_brand"
>
  <div
    className="Alert__content"
    role="alert"
  >
    This is a basic alert without title or action
  </div>
</div>
`;
